--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ serde_derive = "1.0"
 serde-humantime = "0.1"
 serde_json = "1.0"
 toml = "0.5"
-futures = "0.3"
+futures = { version = "0.3", features = ["compat" ] }
 human-size = "0.4"
 humantime = "1.2"
 
